--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <h1>Soccer Web</h1>
-<router-outlet></router-outlet>
 <nav class="navbar navbar-expand-sm bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
@@ -7,10 +6,10 @@
   </a>
   <ul class="nav navbar-nav">
     <li class="nav-item pull-left">
-      <a class="nav-link active" routerLink="/standings">Standings</a>
+      <a class="nav-link active" routerLink="/standing">Standings</a>
     </li>
     <li>
-      <a class="nav-link" routerLink="/scorings">Scorings</a>
+      <a class="nav-link" routerLink="/scoring">Scorings</a>
     </li>
     <li class="nav-item float-xs-right">
       <a class="nav-link" routerLink="/admin">Admin</a>
